# sherbyracing

./: .gitmodules  CMakeLists.txt
no-OS-FatFS-SD-SDIO-SPI-RPi-Pico-main/src/ff15/source/: ff.h
src/: FreeRTOSConfig.h  hw_config.c  sherbylogger.cpp
src/FreeRTOS/: FreeRTOS_CLI.c  FreeRTOS_CLI.h  SR_FreeRTOS.c  SR_FreeRTOS.h  commands.c  commands.h
src/HAL/: IO_HAL.c  IO_HAL.h  MAX11605_HAL.cpp  MAX11605_HAL.hpp  lfs_HAL.c  lfs_HAL.h
